# Note-Summary

Obsidian/Life/: BankerOS-PRD.md  CLAUDE.md
Obsidian/Life/.claude/agents/: bd-scanner.md  calendar-prep.md  email-scanner.md  meeting-bot.md  transcript-ingester.md  voice-session-prep.md
Obsidian/Life/.claude/commands/: create-dcn.md  create-investor-tracker.md  create-rme.md  daily-intelligence.md  process-call-notes.md  update-dcn.md  update-rme.md  weekly-bd-briefing.md  weekly-deals-briefing.md
Obsidian/Life/0. Templates/: Daily Notes.md
Obsidian/Life/Work/: 0. DCN KarmSolar.md
Projects/Note Summary/: .gitignore  PRD.md  Status.md  pyproject.toml  requirements.txt
Projects/Note Summary/config/: config.example.yaml
Projects/Note Summary/scripts/: com.user.note-summary.plist
Projects/Note Summary/src/: main.py
Projects/Note Summary/src/auth/: graph_auth.py  token_cache.py
Projects/Note Summary/src/processors/: email_processor.py
Projects/Note Summary/src/services/: email_service.py  onenote_service.py
Projects/Note Summary/src/storage/: processed_tracker.py
Projects/Note Summary/src/utils/: config.py
Projects/Note Summary/tests/: __init__.py  conftest.py  test_config.py  test_email_processor.py  test_processed_tracker.py
